psp-4237 fix overlapping text.

--- a/frontend/src/features/help/components/HelpBox.scss
+++ b/frontend/src/features/help/components/HelpBox.scss
@@ -13,6 +13,7 @@
   .active:after {
     content: '';
     transform: translateX(100%);
+    align-self: center;
     width: 0;
     height: 0;
     display: inline-block;
